# TMR-2022-AutoModelCar

./: .gitignore  README.md
Reglas_Presencial/: .gitignore  ReglasPresencial.tex
Reglas_Presencial/Figures/: Parking.drawio
Reglas_Virtual/: .gitignore  ReglasVirtual.tex
Rulebook-Virtual/: .gitignore  ReglasVirtual.tex  RulebookVirtual.tex
catkin_ws/src/bring_up/: CMakeLists.txt  package.xml
catkin_ws/src/bring_up/launch/: launcher_task1.launch  launcher_task2.launch  launcher_task3.launch  launcher_task4.launch  navigation_dynamic_obstacles.launch  navigation_no_obstacles.launch  navigation_static_obstacles.launch  parking.launch  world_test.launch
catkin_ws/src/bring_up/rviz/: demo.rviz
catkin_ws/src/bring_up/scripts/: README.txt  cnn_final.py  control_laws.py  lane_detect.py  lane_tracking.py  model.py  object_avoidance.py  overtake.py  parking.py  parking_test.py
catkin_ws/src/bring_up/src/: behaviour_selector_task1_node.py  behaviour_selector_task2_node.py  control_task1_node.py  control_task2_node.py  control_task3_node.py  corke_acker_control.py  lineParkingRoutineFinal.cpp  lined.py  object_detect.cpp  object_detector_node.py  object_detector_node_task4.py  object_parking.cpp
catkin_ws/src/bring_up/worlds/: backup.wbt  navigation_dynamic_obstacles.wbt  navigation_no_obstacles.wbt  navigation_static_obstacles.wbt  parking.wbt  world_test.wbt
catkin_ws/src/computer_vision/: CMakeLists.txt  package.xml
catkin_ws/src/computer_vision/scripts/: .contour_trainer.py.swp  no_obstacles.py1
catkin_ws/src/demo/: CMakeLists.txt  package.xml
catkin_ws/src/demo/launch/: demo.launch
catkin_ws/src/demo/resources/: resource.qrc
catkin_ws/src/demo/rviz/: demo.rviz
catkin_ws/src/demo/scripts/: lane_detector_canny_hough.py  lane_tracking_control_P.py
catkin_ws/src/demo/src/: MainWindow.cpp  QtRosNode.cpp  QtRosNode.h  simple_gui_node.cpp
catkin_ws/src/dotMEX_Car/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/dotMEX_Car/scripts/: 01_optimal_driver_01.py  01_tmr_dotMEX_Car.py  01_tmr_dotMEX_Car_FINAL.py  01_tmr_dotMEX_Car_TEST.py  02_tmr_dotMEX_Car_Final.py  02_tmr_dotMEX_Car_TEST.py  03_tmr_dotMEX_Car_Final.py  04_tmr_dotMEX_Car_FINAL.py
catkin_ws/src/keyboard_control/: CMakeLists.txt  package.xml
catkin_ws/src/keyboard_control/src/: image_processing.cpp  image_processing.hpp  main.cpp  point_cloud_processing.cpp  point_cloud_processing.cpp.color  point_cloud_processing.hpp  ros_processing.cpp  ros_processing.cpp.funcionabasico  segmentation.cpp  segmentation.hpp  utils.cpp  utils.hpp
catkin_ws/src/paquete_lar/: CMakeLists.txt  package.xml
catkin_ws/src/paquete_lar/scripts/: estacionamiento.py  obstaculos_dinamicos.py  obstaculos_estaticos.py  recorre_pista.py
catkin_ws/src/pumas_hm/: CMakeLists.txt  package.xml
catkin_ws/src/pumas_hm/launch/: dynamic_obstacles.launch  no_obstacles.launch  parking.launch  static_obstacles.launch
catkin_ws/src/pumas_hm/scripts/: .control_dynamics.py.swp  control_dynamics.py  (+7 more)
catkin_ws/src/sim_nav_no_obstacle/: CMakeLists.txt  package.xml
catkin_ws/src/sim_nav_no_obstacle/sim_nav_no_obstacle/: CMakeLists.txt  package.xml
catkin_ws/src/sim_nav_no_obstacle/src/: glwindow.hpp  image_processing.cpp  image_processing.hpp  main.cpp  point_cloud_processing.cpp  point_cloud_processing.cpp.back  point_cloud_processing.hpp  ros_processing.cpp  ros_processing.hpp  segmentation.hpp  utils.cpp
catkin_ws/src/sim_nav_no_obstacle/src/respaldo_1_may_2022/: glwindow.cpp  image_processing.cpp  image_processing.hpp  laser_processing.cpp  laser_processing.hpp  ros_processing.cpp  segmentation.cpp  utils.hpp
catkin_ws/src/simple_gui/: CMakeLists.txt  package.xml
catkin_ws/src/tmr2023/: CMakeLists.txt  package.xml
(+16 files in other folders)
